--- a/templates/dashboard/base.html
+++ b/templates/dashboard/base.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset=utf-8 />
-  <title>{% block title %}Django Development Dashboard{% endblock %}</title>
+  <title>{% block title %}Matchbox Development Dashboard{% endblock %}</title>
   {% load static from staticfiles %}
   <link rel="stylesheet" href="{% static "dashboard.css" %}">
   <script type="text/javascript" src="{% static "jquery.min.js" %}"></script>
@@ -11,8 +11,7 @@
   {% block extrahead %}{% endblock %}
 </head>
 <body>
-  <h1>{% block pagetitle %}Django Development Dashboard{% endblock %}</h1>
+    <h1>{% block pagetitle %}Matchbox Development Dashboard{% endblock %}</h1>
   {% block content %}{% endblock %}
-  <a href="https://github.com/jacobian/django-dev-dashboard"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_orange_ff7600.png" alt="Fork me on GitHub"></a>
 </body>
 </html>
